# stalker-radio

./: README.md
stalker-radio/: CMakeLists.txt  README.md  install.sh  uninstall.sh
stalker-radio/assets/: stalker-radio.desktop
stalker-radio/src/: main.cpp
